[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/Editor/MapEditor.gd" type="Script" id=1]
[ext_resource path="res://Menu/Editor/Back.gd" type="Script" id=2]
[ext_resource path="res://Menu/src/Background.jpg" type="Texture" id=3]

[node name="Map Editor" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 3 )

[node name="GridCenter" type="CenterContainer" parent="."]
margin_right = 960.0
margin_bottom = 540.0

[node name="GridContainer" type="GridContainer" parent="GridCenter"]
margin_left = 480.0
margin_top = 270.0
margin_right = 480.0
margin_bottom = 270.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 5

[node name="EditContainer" type="GridContainer" parent="."]
margin_left = 703.0
margin_top = 448.0
margin_right = 944.0
margin_bottom = 492.0
custom_constants/hseparation = 20
columns = 2

[node name="SelectAll" type="Button" parent="EditContainer"]
margin_right = 72.0
margin_bottom = 20.0
text = "Select All"

[node name="Set Type" type="Button" parent="EditContainer"]
margin_left = 92.0
margin_right = 241.0
margin_bottom = 20.0
text = "Set Type"

[node name="Clear" type="Button" parent="EditContainer"]
margin_top = 24.0
margin_right = 72.0
margin_bottom = 44.0
text = "Clear"

[node name="HBoxContainer" type="HBoxContainer" parent="EditContainer"]
margin_left = 92.0
margin_top = 24.0
margin_right = 241.0
margin_bottom = 44.0

[node name="Sub Height" type="Button" parent="EditContainer/HBoxContainer"]
margin_right = 71.0
margin_bottom = 20.0
text = "Height (-)"

[node name="Add Height" type="Button" parent="EditContainer/HBoxContainer"]
margin_left = 75.0
margin_right = 149.0
margin_bottom = 20.0
text = "Height (+)"

[node name="Back" type="Button" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 80.0
margin_bottom = 60.0
text = "Back"
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 760.0
margin_right = 960.0
margin_bottom = 133.0
text = "


Grid Width:

Grid Heigt:

"

[node name="GridWidth" type="TextEdit" parent="."]
margin_left = 840.0
margin_top = 48.0
margin_right = 890.0
margin_bottom = 68.0
text = "5"
caret_blink = true

[node name="GridHeight" type="TextEdit" parent="."]
margin_left = 840.0
margin_top = 80.0
margin_right = 890.0
margin_bottom = 100.0
text = "5"
caret_blink = true

[node name="Build Grid" type="Button" parent="."]
margin_left = 792.0
margin_top = 112.0
margin_right = 892.0
margin_bottom = 132.0
text = "Update  Grid"

[node name="Edit Current" type="Button" parent="."]
margin_left = 792.0
margin_top = 142.0
margin_right = 892.0
margin_bottom = 162.0
text = "Edit Current"

[node name="Save Grid" type="Button" parent="."]
margin_left = 792.0
margin_top = 172.0
margin_right = 892.0
margin_bottom = 192.0
text = "Save Grid"

[node name="Template 1" type="Button" parent="."]
margin_left = 792.0
margin_top = 202.0
margin_right = 812.0
margin_bottom = 222.0
text = "1"

[node name="Template 2" type="Button" parent="."]
margin_left = 822.0
margin_top = 202.0
margin_right = 842.0
margin_bottom = 222.0
text = "2"

[connection signal="pressed" from="EditContainer/SelectAll" to="." method="_on_SelectAll"]
[connection signal="pressed" from="EditContainer/Set Type" to="." method="_on_Set_Type"]
[connection signal="pressed" from="EditContainer/Clear" to="." method="_on_Clear"]
[connection signal="pressed" from="EditContainer/HBoxContainer/Sub Height" to="." method="_on_Sub_Height"]
[connection signal="pressed" from="EditContainer/HBoxContainer/Add Height" to="." method="_on_Add_Height"]
[connection signal="pressed" from="Back" to="Back" method="_on_Back"]
[connection signal="pressed" from="Build Grid" to="." method="_on_Build_Grid"]
[connection signal="pressed" from="Edit Current" to="." method="_on_Edit_Current"]
[connection signal="pressed" from="Save Grid" to="." method="_on_Save_Grid"]
[connection signal="pressed" from="Template 1" to="." method="_on_Template_1"]
[connection signal="pressed" from="Template 2" to="." method="_on_Template_2"]
